# c_binary_parser

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
example/: example.cpp
include/bin_parser/: bit_parser.h  coder.h  parser.h  types.h
include/bitp/: packer.h  parser.h  types.h
src/: coder.c  parser.c
tests/: CMakeLists.txt  CMakeLists.txt.in  download_gtest.cmake  packer_tests_with_checkers.cpp  parser_tests_with_checkers.cpp  parser_without_checkers.cpp
